# gradients-and-intervals

./: Cargo.toml  run.sh
models/: circle.txt  circle_mul.txt  circle_pos.txt  hello_world.txt  rectangle.txt  rectangle_rot.txt  rectangle_rot_circle.txt
src/: main.rs
