[package]
name = "prospero-grad"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
image = { version = "0.25.6", features = ["png"] }
fidget.git = "https://github.com/mkeeter/fidget"
rayon = "1.10.0"
ordered-float = "5.0.0"

[profile.release]
overflow-checks = true
